--- a/遇到的问题.md
+++ b/遇到的问题.md
@@ -1,3 +1,7 @@
 # 栈溢出
 执行AutoProxyTest发生栈溢出，经过排查发现，是DefaultAdvisorAutoProxyCreator的isInfrastructureClass返回False
 导致死循环，isInfrastructureClass返回False的原因是MethodBeforeAdvice没有继承BeforeAdvice接口。
+
+# 实现循环依赖时
+报错 Unsupported source type: class com.sun.proxy.$Proxy2
+没有把AdvisedSupport的proxyTargetClass属性设置为true，导致使用JDK动态代理，由于没有不是接口，应该使用CGlib动态代理
